Delete: firebase stuffs

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ ExportedObj/
 *.pidb.meta
 *.pdb.meta
 *.mdb.meta
+*.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
@@ -86,3 +87,7 @@ Editor Default Resources
 ExternalDependencyManager
 
 Plugins
+
+TextMesh Pro
+
+StreamingAssets
