--- a/.gitignore
+++ b/.gitignore
@@ -78,15 +78,9 @@ crashlytics-build.properties
 
 .vscode/
 [Pp]hoton
-firebase_unity_sdk
-Firebase
-Assets/Scripts/Network/FirebaseService/google-services.json
-Assets/Scripts/Network/FirebaseService/GoogleService-Info.plist
 
-Editor Default Resources
-ExternalDependencyManager
-
-Plugins
+PlayFabEditorExtensions
+PlayFabSDK
 
 TextMesh Pro
 
